<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pic Alarm</string>
    <string name="set_alarm_tone">Set alarm tone</string>
    <string name="welcome_msg">Welcome to Pic Alarm!</string>
    <string name="add_button_text">Add a new alarm</string>
    <string name="delete_button_text">Delete last alarm</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Password">Password</string>
    <string name="original_txt">Original: </string>
    <string name="new_txt">New: </string>
    <string name="originaldescription">Original Photo</string>
    <string name="newdescription">New Photo</string>
    <string name="matchscore">Match Score: </string>
    <string name="takeapic">Take a Picture</string>
    <string name="pswd">Password: </string>
    <string name="check_txt">Check </string>
    <string name="pswdhint">Input password here</string>
    <string name="item_img">Image</string>
    <string name="ON_txt">ON</string>
    <string name="setpswd">Set a Password: </string>
    <string name="or">OR </string>
    <string name="holdnshake">Shake to Stop</string>
    <string name="title_activity_shake">ShakeActivity</string>
    <string name="shake">Shake!!!</string>
    <string name="action_settings">Settings</string>

</resources>
