<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#cccccc" >
    
    <TimePicker
        android:id="@+id/timepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        />
   
    <LinearLayout
        android:id="@+id/lllayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

    	<Button
        	android:id="@+id/Ok"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_weight="5"
        	android:text="@string/OK"
        	android:textColor="#ffffff"
        	android:background="#003366"
        	/>
    	<CheckBox
    	    android:id="@+id/OnOFF"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_weight="7"
        	android:text="@string/ON_txt"
        	android:checked="true"
    	    />
    	<Button
        	android:id="@+id/Cancel"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_weight="5"
        	android:text="@string/Cancel"
        	android:textColor="#ffffff"
        	android:background="#003366"
        	/>
    </LinearLayout>
    
    <RelativeLayout
       android:id="@+id/playout"
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:layout_above="@id/lllayout"
       android:orientation="horizontal" >

       <TextView
           android:id="@+id/pintext"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_alignParentLeft="true"
           android:gravity="center"
           android:text="@string/setpswd" />


       <EditText 
           android:id="@+id/setting_pinedit"
           android:layout_width="match_parent"
	       android:layout_height="match_parent"
	       android:gravity="center"
	       android:layout_alignParentRight="true"
	       android:layout_toRightOf="@id/pintext"
	       android:hint="@string/pswdhint"/>
   </RelativeLayout>
   
   
   <LinearLayout
       android:id="@+id/splayout"
	   android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:layout_above="@id/playout"
	   android:layout_below="@id/timepicker"
	   android:orientation="vertical"
	   android:weightSum="5"
	   >
       <ImageView 
	       android:id="@+id/selectaPicView"
	       android:layout_width="match_parent"
	       android:layout_height="match_parent"
	       android:layout_weight="1"
	       android:contentDescription="@string/item_img"/>
	   <Button
	       android:id="@+id/selectaPic"
	       android:layout_width="match_parent"
	       android:layout_height="match_parent"
	       android:text="@string/takeapic"
	       android:textColor="#ffffff"
	       android:background="#003366"
	       android:layout_weight="4"/>
   </LinearLayout>
   
</RelativeLayout>
